# sciline

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  output.txt  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  nightly_at_main.yml  nightly_at_main_lower_bound.yml  nightly_at_release.yml  python-version-ci  release.yml  test.yml  unpinned.yml  weekly_windows_macos.yml
_modules/: index.html  typing.html
_modules/sciline/: _provider.html  data_graph.html  domain.html  handler.html  pipeline.html  reporter.html  scheduler.html  task_graph.html
_modules/sciline/serialize/: _json.html
_modules/sciline/sphinxext/: domain_types.html
_sources/: index.md
_sources/about/: index.md
_sources/api-reference/: index.md
_sources/developer/: architecture-decision-records.md  coding-conventions.md  dependency-management.md  getting-started.md  index.md
_sources/developer/adr/: 0001-remove-isinstance-checks-when-setting-parameters.md
_sources/developer/architecture-and-design/: index.md  rewrite.ipynb  workflow-design.md
_sources/recipes/: applying-decorators.ipynb  benchmarking.ipynb  continue-from-intermediate-results.ipynb  index.md  replacing-providers.ipynb  side-effects-and-file-writing.ipynb
_sources/user-guide/: generic-providers.ipynb  index.md  parameter-tables.ipynb  provenance.ipynb
_static/: documentation_options.js
about/: index.html
api-reference/: index.html
conda/: meta.yaml
developer/: architecture-decision-records.html  coding-conventions.html  dependency-management.html  getting-started.html  index.html
developer/adr/: 0001-remove-isinstance-checks-when-setting-parameters.html  0002-remove-special-handling-of-optional-and-union.html
developer/architecture-and-design/: index.html  rewrite.html  workflow-design.html
docs/: conf.py  conf.py.rej  index.md
docs/_static/css/: custom.css
docs/_templates/: class-template.rst  doc_version.html  module-template.rst
docs/about/: index.md
docs/api-reference/: index.md
docs/developer/: coding-conventions.md  getting-started.md  index.md
docs/developer/adr/: 0001-remove-isinstance-checks-when-setting-parameters.md  0002-remove-special-handling-of-optional-and-union.md
docs/developer/architecture-and-design/: index.md  rewrite.ipynb  workflow-design.md
docs/recipes/: applying-decorators.ipynb  benchmarking.ipynb  continue-from-intermediate-results.ipynb  index.md  optional-pipeline-steps.ipynb  recipes.ipynb  replacing-providers.ipynb  side-effects-and-file-writing.ipynb
docs/user-guide/: generic-providers.ipynb  getting-started.ipynb  index.md  installation.md  parameter-tables.ipynb  provenance.ipynb  recipes.ipynb  replacing-providers.ipynb  serialization.ipynb
recipes/: applying-decorators.html  benchmarking.html  continue-from-intermediate-results.html  index.html  replacing-providers.html  side-effects-and-file-writing.html
requirements/: base.in  base.in.rej  base.txt  basetest.in  basetest.txt  ci.txt  dev.in  dev.txt  docs.in  docs.txt  make_base.py  make_base.py.rej  mypy.in  mypy.txt  nightly.in  nightly.txt  static.txt  test-dask.in  test-dask.txt  test.in  test.txt  wheels.txt
src/sciline/: __init__.py  _provider.py  _utils.py  container.py  data_graph.py  dependency_graph.py  display.py  domain.py  graph.py  handler.py  param_table.py  pipeline.py  reporter.py  scheduler.py  series.py  task_graph.py  task_graph2.py  typing.py  utils.py  variadic.py  visualize.py
src/sciline/serialize/: __init__.py  _json.py  graph_json_schema.json
src/sciline/sphinxext/: __init__.py  domain_types.py
tests/: _provider_test.py  complex_workflow_test.py  conftest.py  container_test.py  dask_scheduler_test.py  domain_test.py  graph_test.py  groupby_test.py  mypy_test.py  package_test.py  param_table_test.py  pipeline_map_reduce_test.py  pipeline_setitem_test.py  pipeline_test.py  pipeline_with_index_test.py  pipeline_with_optional_test.py  pipeline_with_param_table_test.py  pipeline_with_postponed_annotations_test.py  reporter_test.py  task_graph_test.py  test_package.py  utils_test.py  variadic_pipeline_test.py  variadic_workflow_test.py  visualize_test.py
tests/serialize/: json_test.py
user-guide/: generic-providers.html  getting-started.html  index.html  installation.html  parameter-tables.html  provenance.html
