[build-system]
requires = [
  "setuptools>=67",
  "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "sciline"
description = "Build scientific pipelines for your data"
authors= [{name="Scipp contributors"}]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
  "graphlib-backport",
]
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/scipp/sciline/issues"
"Source" = "https://github.com/scipp/sciline"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -v"
testpaths = "tests"
filterwarnings = [
  "error",
]

[tool.bandit]
# Excluding tests because bandit doesn't like `assert`.
exclude_dirs = ["docs/conf.py", "tests"]

[tool.black]
skip-string-normalization = true

[tool.isort]
skip_gitignore = true
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
show_error_codes = true
warn_unreachable = true
