[metadata]
name = sciline
author = Scipp contributors (https://github.com/scipp)
description = Build scientific pipelines for your data
license = BSD
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scipp.github.io/sciline
project_urls =
    Bug Tracker = https://github.com/scipp/sciline/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
sciline = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203
