[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
sciline = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203
